--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <title>Sprint Challenge - Home</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/index.css">
 
 </head>
